Fix overflow always showing in autocomplete input

--- a/webapp/src/assets/css/tailwind.css
+++ b/webapp/src/assets/css/tailwind.css
@@ -460,5 +460,4 @@ p {
 .dropdown-scrollbar {
     margin-right: 4px;
     top: 72px;
-    overflow-y: scroll; /* Ensure that scrollbar appears only when needed */
 }
